@@ -37,7 +37,12 @@ class TestZMProductFinder extends ZMTestCase {
         $search->setCriteria($criteria);
         $search->setSortId('name');
         $search->setDescending(true);
-        $productIds = $search->execute();
+        $queryDetails = $search->execute();
+        $results = $queryDetails->query();
+        $productIds = array();
+        foreach ($results as $result) {
+            $productIds[] = $result['productId'];
+        }
         $expected = array(7, 9, 10, 19, 4, 6, 17, 18, 14, 13, 15, 11, 12, 16, 5, 20, 8);
         $this->assertEqual($expected, $productIds);
     }
